New file structure

--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,6 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <span>No settings yet</span>
+    <input id="veasitEmail" />
   </body>
 </html>
